# FileScout

./: Cargo.toml  LICENCE  README.md  Readme.MD
src/: constant.rs  crypto_handler.rs  explorer.rs  key_events.rs  main.rs  ui.rs
