[package]
name = "fs"
version = "0.3.0"
edition = "2021"

description = "Tui based basic file explorer"
repository = "https://github.com/devendra-official/FileScout"
readme = "README.md"

[dependencies]
aes-gcm = "0.10.3"
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
ratatui = "0.29.0"
tokio = { version = "1.44.1", features = ["full"] }
tokio-stream = "0.1.17"
